# kernso-mcp

./: .env.example  .gcloudignore  .gitignore  Dockerfile  LICENSE  README.md  claude_desktop_config.json.example  cloudbuild.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: golden_parity.py  lint_safety.sh  test_stdio.py
src/kernso_mcp/: __init__.py  __main__.py  server.py
tests/: test_safety.py  test_server.py
